# huemiliator

./: .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  LICENSE  Makefile  README.md  package-lock.json  package.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  dependency-review.yml  stale-dependency-prs.yml
data/: margaret2_swatches.json
docs/diagrams/: PIPELINE.md
docs/governance/: CHARTER.md  DECISIONS.md  SESSION_HANDOFF.md
docs/research/: 000_LEGEND.md  010_PB10.md  020_B10.md  210_RED_ORANGE.md  310_RED_ORANGE_AUDIT.md  410_N3.md  420_RESIDUE.md  430_WARM_EDGE_AUDIT.md  FINDING_1_CONTEXTUAL_BROWN.md  FINDING_2_RED_SHOULDER_DRIFT.md  README.md  beta_1_0_fail_pressure_pulse_2026-05-21.md  brown-context-dependence.md  brown_context_dependence_2026-05-08.md  pre_beta_1_fail_pressure_pulse_2026-05-16.md  red-to-orange-edge-drift.md  red_orange_edge_drift_2026-05-15.md  red_orange_edge_drift_audit_2026-05-16.md
docs/runtime/: ARCHITECTURE.md  RUNBOOK.md  START_END_REFERENCE.md
docs/runtime/templates/: README.md  backlog.md  boundary.md  case.md  hypothesis.md  lane.md  legend.md  validation.md
output/jupyter-notebook/: huemiliator-eval-surface.ipynb
scripts/: check_end_docs.py  check_end_git_clean.sh  check_shell_scripts.py  doctor_env.py  end_of_day_routine.sh  eval_status.py  freeze_margaret2_swatches.py  read_startup_docs.py  render_research_charts.mjs  start_of_day_routine.sh
src/huemiliator/: __init__.py  __main__.py  agent.py  colour_math.py  config.py  eval_db.py  eval_sampling.py  eval_scope.py  families.py  loss_lines.py  main.py  picker.py  pipeline.py  resolution.py  swatches.py
tests/: test_agent.py  test_config.py  test_eval_db.py  test_eval_sampling.py  test_eval_status.py  test_families.py  test_loss_lines.py  test_main.py  test_path_leak_check.py  test_picker.py  test_pipeline.py  test_read_startup_docs.py  test_resolution.py  test_swatches.py  test_tooling_contract.py
