[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "huemiliator"
version = "0.1.0"
description = "Deterministic colour one-up mini chatbot in the Polinko research line."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
  "openai==2.37.0",
  "python-dotenv==1.2.2",
]

[project.optional-dependencies]
dev = [
  "build==1.5.0",
  "mypy==1.20.2",
  "pip-audit==2.9.0",
  "pre-commit==4.5.1",
  "pytest==9.0.3",
  "ruff==0.15.12",
]

[project.scripts]
huemiliator = "huemiliator.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
files = ["src", "tests", "scripts"]
pretty = true
show_error_codes = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["dotenv"]
ignore_missing_imports = true
