[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "huemiliator"
version = "0.1.0"
description = "Deterministic colour one-up mini chatbot in the Polinko research line."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
  "idna==3.18",
  "openai==2.43.0",
  "python-dotenv==1.2.2",
  "urllib3==2.7.0",
]

[project.optional-dependencies]
dev = [
  "build==1.5.0",
  "mypy==2.1.0",
  "pip-audit==2.10.1",
  "pre-commit==4.6.0",
  "pytest==9.1.1",
  "ruff==0.15.18",
]

[project.scripts]
huemiliator = "huemiliator.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
files = ["src", "tests", "scripts"]
pretty = true
show_error_codes = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["dotenv"]
ignore_missing_imports = true
